{
  "version": 4,
  "terraform_version": "1.8.0",
  "serial": 57,
  "lineage": "41c771d8-0570-c0d3-930d-aa60d0f4c8e2",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "ec2_tic_tac_toe",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-051f8a213df8bc089",
            "arn": "arn:aws:ec2:us-east-1:334305564074:instance/i-0a2551be6e1d6a589",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0a2551be6e1d6a589",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-06a6f017743e75fc8",
            "private_dns": "ip-172-31-93-132.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "172.31.93.132",
            "public_dns": "ec2-107-21-150-26.compute-1.amazonaws.com",
            "public_ip": "107.21.150.26",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0405657d73a63ee9f",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "security_groups": [
              "terraform-20240418173407418700000001"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0563e440ca7c630d8",
            "tags": {
              "Name": "Ec2 Tic-tac-toe tf"
            },
            "tags_all": {
              "Name": "Ec2 Tic-tac-toe tf"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-03bd81cdbc6d4bec6"
            ]
          },
          "dependencies": [
            "aws_security_group.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw_tf",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:334305564074:internet-gateway/igw-0918322d74504df76",
            "id": "igw-0918322d74504df76",
            "owner_id": "334305564074",
            "tags": {
              "Name": "Gateway Tic-tac-toe tf"
            },
            "tags_all": {
              "Name": "Gateway Tic-tac-toe tf"
            },
            "vpc_id": "vpc-01f914838f98cc899"
          },
          "dependencies": [
            "aws_vpc.vpc_tf"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "rt_tf",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:334305564074:route-table/rtb-09788c08dd2bb2faa",
            "id": "rtb-09788c08dd2bb2faa",
            "owner_id": "334305564074",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0918322d74504df76",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Route table Tic-tac-toe tf"
            },
            "tags_all": {
              "Name": "Route table Tic-tac-toe tf"
            },
            "timeouts": null,
            "vpc_id": "vpc-01f914838f98cc899"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.igw_tf",
            "aws_vpc.vpc_tf"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "subnet_tf",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-08251776010221c5a",
            "route_table_id": "rtb-09788c08dd2bb2faa",
            "subnet_id": "subnet-071dea53125aa33d5"
          },
          "dependencies": [
            "aws_internet_gateway.igw_tf",
            "aws_route_table.rt_tf",
            "aws_subnet.subnet_tf",
            "aws_vpc.vpc_tf"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:334305564074:security-group/sg-03bd81cdbc6d4bec6",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-03bd81cdbc6d4bec6",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Backend",
                "from_port": 3000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3000
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Frontend",
                "from_port": 5173,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 5173
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "SSH",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "terraform-20240418173407418700000001",
            "name_prefix": "terraform-",
            "owner_id": "334305564074",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-007c7d805b8672293"
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet_tf",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:334305564074:subnet/subnet-071dea53125aa33d5",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1e",
            "availability_zone_id": "use1-az3",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-071dea53125aa33d5",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "334305564074",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Subnet Tic-tac-toe tf"
            },
            "tags_all": {
              "Name": "Subnet Tic-tac-toe tf"
            },
            "vpc_id": "vpc-01f914838f98cc899"
          },
          "dependencies": [
            "aws_vpc.vpc_tf"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc_tf",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:334305564074:vpc/vpc-01f914838f98cc899",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0339cedd8ec83f45d",
            "default_route_table_id": "rtb-01fe41e8b87ca721b",
            "default_security_group_id": "sg-0162d4c4f191053d4",
            "dhcp_options_id": "dopt-038213cc5e9be97d9",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-01f914838f98cc899",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-01fe41e8b87ca721b",
            "owner_id": "334305564074",
            "tags": {
              "Name": "Vpc Tic-tac-toe tf"
            },
            "tags_all": {
              "Name": "Vpc Tic-tac-toe tf"
            }
          }
        }
      ]
    }
  ]
}